Fixed DE670: Shifted checkboxes ( Invite Participants step)

--- a/public/js/ngApp/components/dashboard-resources-contactLists/contact-lists.scss
+++ b/public/js/ngApp/components/dashboard-resources-contactLists/contact-lists.scss
@@ -303,6 +303,7 @@
 
   .fields-to-show {
     margin: 10px 0;
+    text-align: left;
 
     label {
       margin-right: 10px;
